[Refactor] getFirst() 메소드로 변경